manifests/operator/webhook-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-route
  namespace: easy-deploy-system
  annotations:
    external-dns.alpha.kubernetes.io/target: "116.203.203.121"
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - webhook.easysolution.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /webhook
      backendRefs:
        - name: easy-deploy-webhook
          port: 9090
